# mp3v0fs

./: .gitignore  Cargo.toml  README.md
src/: encode.rs  inode.rs  lib.rs  libc_extras.rs  libc_wrappers.rs  main.rs  mp3v0fs.rs  tags.rs
src/lame/: mod.rs
src/lib/: mod.rs
src/libc_util/: libc_extras.rs  libc_wrappers.rs  mod.rs
tests/: integration.rs
tests/resources/: C1.flac
