[package]
name = "mp3v0fs"
version = "0.1.0"
authors = ["Jared <jared@jaredbeckham.com>"]
edition = "2018"

[dependencies]
claxon = { git = "https://github.com/jtbeckha/claxon.git" }
#claxon = "0.4.2"
crossbeam-utils = "0.7.0"
id3 = "0.3.0"
libc = "0.2"
lame = "0.1.3"
log = "^0.4.8"
fuse_mt = "0.5.0"
simplelog = "0.5.0"
time = "0.1"

[dev-dependencies]
tempfile = "3"
