[package]
name = "mp3v0fs"
version = "0.1.0"
authors = ["Jared <jared@jaredbeckham.com>"]
edition = "2018"

[dependencies]
claxon = { git = "https://github.com/jtbeckha/claxon.git" }
#claxon = "0.4.2"
crossbeam-utils = "0.8.7"
id3 = "0.3.0"
libc = "0.2"
lame-sys = "0.1.2"
log = "^0.4.8"
fuse = { git = "https://github.com/zargony/fuse-rs.git", rev = "42e29d964e2b24e32e21b179b77e4d0d0a0857ac" }
simplelog = "0.5.0"

[dev-dependencies]
simplemad = "0.9.0"
tempfile = "3"
